@@ -12,6 +12,8 @@ module.exports = function (cassandra, agent, { version, enabled }) {
     return cassandra
   }
 
+  const ins = agent._instrumentation
+
   if (cassandra.Client) {
     if (semver.gte(version, '4.4.0')) {
       // Prior to v4.4.0, the regular `connect` function would be called by the
@@ -31,7 +33,7 @@ module.exports = function (cassandra, agent, { version, enabled }) {
 
   function wrapAsyncConnect (original) {
     return async function wrappedAsyncConnect () {
-      const span = agent.startSpan('Cassandra: Connect', 'db', 'cassandra', 'connect')
+      const span = ins.createSpan('Cassandra: Connect', 'db', 'cassandra', 'connect')
       try {
         return await original.apply(this, arguments)
       } finally {
@@ -42,7 +44,7 @@ module.exports = function (cassandra, agent, { version, enabled }) {
 
   function wrapConnect (original) {
     return function wrappedConnect (callback) {
-      const span = agent.startSpan('Cassandra: Connect', 'db', 'cassandra', 'connect')
+      const span = ins.createSpan('Cassandra: Connect', 'db', 'cassandra', 'connect')
       if (!span) {
         return original.apply(this, arguments)
       }
@@ -80,7 +82,7 @@ module.exports = function (cassandra, agent, { version, enabled }) {
 
   function wrapBatch (original) {
     return function wrappedBatch (queries, options, callback) {
-      const span = agent.startSpan('Cassandra: Batch query', 'db', 'cassandra', 'query')
+      const span = ins.createSpan('Cassandra: Batch query', 'db', 'cassandra', 'query')
       if (!span) {
         return original.apply(this, arguments)
       }
@@ -124,7 +126,7 @@ module.exports = function (cassandra, agent, { version, enabled }) {
 
   function wrapExecute (original) {
     return function wrappedExecute (query, params, options, callback) {
-      const span = agent.startSpan(null, 'db', 'cassandra', 'query')
+      const span = ins.createSpan(null, 'db', 'cassandra', 'query')
       if (!span) {
         return original.apply(this, arguments)
       }
@@ -163,7 +165,7 @@ module.exports = function (cassandra, agent, { version, enabled }) {
 
   function wrapEachRow (original) {
     return function wrappedEachRow (query, params, options, rowCallback, callback) {
-      const span = agent.startSpan(null, 'db', 'cassandra', 'query')
+      const span = ins.createSpan(null, 'db', 'cassandra', 'query')
       if (!span) {
         return original.apply(this, arguments)
       }
