@@ -52,6 +52,9 @@ Notes:
 [float]
 ===== Bug fixes
 
+* Fixes for run context handling for 'cassandra-driver' instrumentation.
+  ({issues}2430[#2430])
+
 * Fixes for run context handling for 'mongodb-core' instrumentation.
   ({issues}2430[#2430])
 
